# RustCrew

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SETUP.md  docker-compose.yml  error.txt
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs  models.rs
src/core/: agent.rs  collaboration.rs  crew.rs  knowledge.rs  llm.rs  mod.rs  planning.rs  policy.rs  reasoning.rs  scheduler.rs  task.rs
src/memory/: contextual.rs  entity.rs  in_memory.rs  mod.rs  short_term.rs  sql.rs  vector.rs
src/tools/: browser.rs  file.rs  github.rs  http.rs  interpreter.rs  mod.rs  vector_lookup.rs  web_search.rs
src/tools/database/: mod.rs  mongodb.rs  mysql.rs  postgres.rs  snowflake.rs
tests/: integration_tests.rs
