[package]
name = "rustcrew"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
dashmap = "6.0"
